Fix Gallery White Spaces. Wrapping Of Images Needs To Be Fixed. Implemented Basic Form Structure

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 /* Navigation Bar */
-
 body {
     margin: 0;
 }
@@ -53,13 +52,11 @@ li {
     width: 100%;
     display: flex;
     padding: 5vh 0;
-    justify-content: space-between;
     align-items: center;
 }
 
 .itemRight, .itemLeft {
     max-width: 47%;
-    max-height: 500px;
     margin-right: auto;
     border-radius: 5%;
 }
@@ -86,10 +83,10 @@ p {
 #OurWorkBtn{
     padding: 1em;
     font-size: 16px;
-    color: white;
+    color: #f0860c;
     background-color: #ff9100;
     border-radius: 36px;
-    border-color: white;
+    border-color: #f0860c;
     border-left-width: 0;
     border-right-width: 0;
     border-bottom-width: 0;
@@ -220,11 +217,115 @@ h3 {
 }
 
 .galleryImage {
-    max-width: 400px;
-    max-height: 200px;
     visibility: visible;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
-.photo {
-    display: inline;
+.row {
+    display: flex;
+}
+
+.column {
+    padding: 5px;
+}
+    
+.submitbutton {
+    height: 3em;
+    width: 7em;
+    margin-top: 0.5%;
+    border-radius: 12px;
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    padding: 9px 15px;
+    background-color: #00184c;
+    cursor: pointer;
+}
+
+#btnCenter {
+    text-align: center;
+    padding-bottom: 2.5%;
+}
+
+#email, #message {
+    background-color: rgb(255, 255, 255);
+    width: 72.5%;
+    color: White;
+    border: 2px solid #030303;
+    margin: 1%;
+    padding: 2%;
+    margin-left: 12%;
+}
+
+#name,  #lname {
+    width: 32%;
+    background-color: rgb(255, 255, 255);
+    color: White;
+    border: 2px solid #030303;
+    padding: 2%;
+    margin: 1%;
+}
+
+#name {
+    margin-left: 12%;
+    margin-right: 2%;
+}
+
+
+
+
+
+input[type="text"],
+input[type="email"],
+input[type="text"],
+textarea[name="message"]
+{
+    font-size:18px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.itemLeftForm {
+    background-color: rgb(0, 24, 77, 40%);
+    max-width: 47%;
+    border-radius: 5%;
+    border: 2px solid #030303;
+}
+
+#formText {
+    font-size: 20px;
+    color: white;
+    line-height: 1.5em;
+    letter-spacing: 0.2px;
+    font-weight: bolder;
+    margin-left: 0.5%;
+    text-align: center;
+    padding: 3%;
+}
+
+.imageBackground {
+    background:linear-gradient(0deg, rgba(0, 24, 77, 0.8), rgba(0, 24, 77, 0.8)), url("https://contemporary-coatings.co.uk/wp-content/uploads/2022/02/Paints.jpg");
+}
+
+#info {
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.itemRightInfo {
+    display: block;
+    margin-left: 15%;
+    text-align: center;
+}
+
+a {
+    color: #0051ff;
+}
+
+a:hover {
+    color: #f0860c;
+    cursor: pointer;
 }
